Wed Jul  5 01:12:19 2006  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* test/ruby/test_lambda.rb (TestLambdaParameters::test_lambda_as_iterator): 
	  -> style block no longer available.  [ruby-dev:28958]

Tue Jul  4 21:48:56 2006  NAKAMURA Usaku  <usa@ruby-lang.org>

	* ruby.c (proc_options): supress warning on DOSISH.

Tue Jul  4 15:12:49 2006  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* eval.c (rb_call): should not set prot_tag->blkid since it would
	  never catch breaks at this level.  [ruby-dev:28922]

Tue Jul  4 04:48:36 2006  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* bignum.c: ruby 1.9 HEAD 64 bit warnings clean up from
	  <ville.mattila at stonesoft.com>.   [ruby-core:08120]

Mon Jul  3 19:04:38 2006  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/tcltklib.c (ip_make_menu_embeddable): help to make a menu
	  widget embeddable (pack, grid, and so on) like as a general widget. 
	  However, an embeddable menu may require to be definied some event
	  bindings for general use. 

	* ext/tk/lib/tk/event.rb: [bug fix] Tk.callback_break and
	  Tk.callback_continue don't work on MultiTkIp.

	* ext/tk/lib/multi-tk.rb: ditto.

	* ext/tk/lib/tk.rb: lack of Tk.callback_return.

	* ext/tk/lib/tk/menu.rb: improve creating clone menus.

Mon Jul  3 14:42:06 2006  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/etc/extconf.rb (PW_UID2VAL, PW_GID2VAL): defaulted to conversion
	  from int, and sys/types.h needs to be included before grp.h.
	  fixed: [ruby-dev:28938]

Mon Jul  3 10:44:01 2006  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c (popen_exec): close file descriptors other than standard I/Os.
	  fixed: [ruby-dev:28924]

Mon Jul  3 05:15:29 2006  GOTOU Yuuzou  <gotoyuzo@notwork.org>

	* test/openssl/test_asn1.c: String#[]= doesn't accept Integer.

Mon Jul  3 01:14:15 2006  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* string.c (rb_str_inspect): encode \b (\010) for escape.
	  [ruby-dev:28927]

	* string.c (rb_str_dump): ditto.
